# BusToSubway

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
data/: ulsan_bus_route_before.parquet  ulsan_route_schedule_before.parquet  ulsan_stops_after.parquet  ulsan_stops_before.parquet
docs/: README.md  explanation.md  how-to.md  reference.md  tutorial.md
reference/audit/: routes_stops.md  schedule_after.md  schedule_before.md  variant_tags.md
reference/prior_baseline/: baseline.yaml  known_deviations.yaml  raw_hashes.yaml
reference/variant_tagging/: variant_tags.csv
src/: __init__.py  manifest.py  paths.py  run.py  status.py
src/bts/: __init__.py  manifest.py  paths.py  run.py  status.py
src/checks/: __init__.py  core.py  diff.py  lint.py
src/dataio/: __init__.py  normalize.py  raw_bus_route_after.py  raw_bus_route_before.py  raw_schedule_after.py  raw_schedule_before.py  raw_stops.py  raw_variant_tags.py  timeparse.py
src/s00_ingest/: after.py  before.py
src/s01_canonical/: __init__.py  after.py  before.py  trip_split.py
src/s02_place/: __init__.py  diagnostics.py  merge.py
src/s03_hub/: metrics.py  qualify.py
tests/: conftest.py
tests/contracts/: test_checks_primitives.py  test_diff_judge.py  test_lint_and_paths.py  test_runner_gates.py
tests/unit/: test_manifest.py  test_normalize.py  test_raw_stops.py  test_rules_yaml.py  test_s00_before_checks.py  test_s00_before_loaders.py  test_s01_before_build.py  test_s01_before_checks.py  test_s02_overrides.py  (+8 more)
tools/: build_place_hub_map.py
viewers/: place_hub_map_before.html
(+455 files in other folders)
